<resources>
    <string name="app_name">Bash.im</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_top_title">www.bash.im</string>
    <string name="navigation_drawer_top_subtitle">Developed by Denys Husher</string>

    <string name="searchable_label">Search</string>
    <string name="picker_label">Pick the date</string>

    <string name="action_main">Quotes</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_comics">Comics</string>
    <string name="action_random">Random</string>
    <string name="action_best">Best</string>
    <string name="action_refresh">Refresh</string>

    <string name="activity_preferences">Preferences</string>

    <string name="dialog_title_no_internet">No internet connection</string>
    <string name="dialog_title_date_picker">Select period</string>

    <string name="dialog_text_no_internet">Check your connection to the Internet and click Retry
        to download new quotes or click Cancel to close this dialog.</string>
    <string name="dialog_text_no_internet_by_settings">No available WiFi connections. Check your
        connection or change application settings.</string>
    <string name="dialog_text_year">Year: </string>
    <string name="dialog_text_month">Month: </string>
    <string name="dialog_text_aborted_download">Downloading was aborted. Please retry by clicking
        refresh button on the top bar a little bit later.</string>

    <string name="dialog_btn_text_cancel">Cancel</string>
    <string name="dialog_btn_text_retry">Retry</string>
    <string name="dialog_btn_text_done">Done</string>
    <string name="dialog_btn_text_ok">OK</string>

    <plurals name="notification_text">
        <item quantity="one">You have %d new quot</item>
        <item quantity="other">You have %d new quotes</item>
    </plurals>

    <string name="preferences_key_notifications">showNotifications</string>
    <string name="preferences_key_only_wifi">onlyWifi</string>
    <string name="preferences_key_alarm_frequency">frequency</string>
    <string name="preferences_key_version">version</string>

    <string name="preferences_title_notifications">Notifications</string>
    <string name="preferences_title_only_wifi">Use only WiFi</string>
    <string name="preferences_title_alarm_frequency">Update frequency</string>
    <string name="preferences_title_app_version">Bash.im version</string>

    <string name="menu_context_copy">Copy</string>
    <string name="menu_context_share">Share</string>

    <string name="menu_context_title">Action</string>

    <string name="toast_text_copied">Copied</string>
    <string name="error_no_items_found">No quotes has been found</string>

    <string-array name="listArray">
        <item>Never</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>12 hours</item>
    </string-array>

    <string-array name="listValues">
        <item>0</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>10800000</item>
        <item>43200000</item>
    </string-array>

    <string-array name="years">
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
    </string-array>

    <string-array name="months">
        <item>All</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
