<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:defaultValue="1800000"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues"
        android:key="@string/preferences_key_alarm_frequency"
        android:title="@string/preferences_title_alarm_frequency" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/preferences_key_notifications"
        android:title="@string/preferences_title_notifications" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/preferences_key_only_wifi"
        android:title="@string/preferences_title_only_wifi" />

    <Preference
        android:key="@string/preferences_key_version"
        android:summary="1.4.6.2"
        android:title="@string/preferences_title_app_version" />
</PreferenceScreen>